some test changes

--- a/htmls/tierlist.html
+++ b/htmls/tierlist.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Azurlane Tier list</title>
-    <link rel="stylesheet" href="styles/table.css">
+    <link rel="stylesheet" href="../styles/table.css">
 </head>
 
 <body>
@@ -840,7 +840,7 @@
     </div>
 
     <div data-paramButton=""></div>
-    <script src="scripts/menu.js">
+    <script src="../scripts/menu.js">
     </script>
 </body>
 
