--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
     <p class="paragraph">此圖鑒僅包含強度榜中所存在的艦船，想看全圖鑒的，請回碧藍航線wiki。</p>
     <p class="paragraph">此tier list更新時間不定，有興趣的朋友可以接手過去。<span class="spoiler">請務必這樣做</span></p>
     <h1>圖鑒尚未更新完畢，現只包含驅逐艦。</h1>
-    <a style="font-size: xx-large;"href="tierlist.html">通往強度榜圖鑒</a>
+    <a style="font-size: xx-large;"href="/htmls/tierlist.html">通往強度榜圖鑒</a>
     </body>
 </html>
