changes to hyperlink of index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body style="background-color: antiquewhite;">
         <header class="indexHeader">這裡是主頁</header>
         <p class="paragraph">這個網頁以及repo是個人用來方便查詢的碧藍航線tier list，格式以及大量的源代碼參考<span class="spoiler">偷</span>自<a href="https://wiki.biligame.com/blhx/%E9%A6%96%E9%A1%B5">碧藍航線wiki</a>。</p>
-        <p class="paragraph">Tier list來自<a href="https://wiki.biligame.com/blhx/%E4%BA%95%E5%8F%B7%E7%A2%A7%E8%93%9D%E6%A6%9C%E5%90%88%E9%9B%86#%E8%A3%85%E5%A4%87%E4%B8%80%E5%9B%BE%E6%A6%9C">
+        <p class="paragraph">Tier list來自<a href="https://wiki.biligame.com/blhx/%E4%BA%95%E5%8F%B7%E7%A2%A7%E8%93%9D%E6%A6%9C%E5%90%88%E9%9B%86">
             井号5467的认知强度榜
         </a>
         ，並且所有圖片來源于碧藍航線wiki的圖庫，本人只是為了個人遊玩方便，決定自己編寫強度榜篩選圖鑒，本人並不熟悉html，css以及js的編程，是為了編寫這個網頁而自學所提及的語言，所以可能有大量bug以及不合理的設計。
