--- a/index.html
+++ b/index.html
@@ -1,23 +1,63 @@
 <!DOCTYPE html>
 
 <html>
-    <head>
-        <title>Main site</title>
-        <link rel="stylesheet" href="styles/index.css">
-    </head>
-    <body style="background-color: antiquewhite;">
+
+<head>
+    <title>Main site</title>
+    <link rel="stylesheet" href="styles/index.css">
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+
+    <script>
+        function select_language(language) {
+            $("[lang]").each(function () {
+                if ($(this).attr("lang") == language)
+                    $(this).show();
+                else
+                    $(this).hide();
+            });
+        }
+    </script>
+</head>
+
+<body style="background-color: antiquewhite;">
+    <select style="border: 6px solid transparent;padding: 6px 10px;display: flex;" onchange="select_language(this.options[this.selectedIndex].value)">
+        <option value="CN" selected >简体中文</option>
+        <option value="TC" >繁體中文</option>
+    </select>
+    <span lang="CN">
+        <header class="indexHeader">这里是主页</header>
+        <p class="paragraph">这个网页以及repo是个人用来方便查询的碧蓝航线tier list，格式以及大量的源代码参考<span class="spoiler">偷</span>自<a
+                href="https://wiki.biligame.com/blhx/%E9%A6%96%E9%A1%B5">碧蓝航线wiki</a>。</p>
+        <p class="paragraph">Tier list来自<a
+                href="https://wiki.biligame.com/blhx/%E4%BA%95%E5%8F%B7%E7%A2%A7%E8%93%9D%E6%A6%9C%E5%90%88%E9%9B%86">
+                井号5467的认知强度榜
+            </a>
+            ，并且所有图片来源于碧蓝航线wiki的图库，本人只是为了个人游玩方便，决定自己编写强度榜筛选图鉴，本人并不熟悉html，css以及js的编程，是为了编写这个网页而自学所提及的语言，所以可能有大量bug以及不合理的设计。
+        </p>
+        <p class="paragraph">请注意图鉴的筛选算法是AND而不是OR，并且和碧蓝航线wiki不一样。 (因为我编程差，不会写。)</p>
+        <p class="paragraph">并且所有舰船资料由html里自带。 (感觉不该是这样编写的，工作量太大了，但是我不会)</p>
+        <p class="paragraph">此图鉴仅包含强度榜中所存在的舰船，想看全图鉴的，请回碧蓝航线wiki。</p>
+        <p class="paragraph">此tier list更新时间不定，有兴趣的朋友可以接手过去。<span class="spoiler">请务必这样做</span></p>
+        <h1>图鉴尚未更新完毕，现只包含驱逐舰。</h1>
+        <a style="font-size: xx-large;" href="htmls/tierlist.html">通往强度榜图鉴</a>
+    </span>
+    <span lang="TC" hidden>
         <header class="indexHeader">這裡是主頁</header>
-        <p class="paragraph">這個網頁以及repo是個人用來方便查詢的碧藍航線tier list，格式以及大量的源代碼參考<span class="spoiler">偷</span>自<a href="https://wiki.biligame.com/blhx/%E9%A6%96%E9%A1%B5">碧藍航線wiki</a>。</p>
-        <p class="paragraph">Tier list來自<a href="https://wiki.biligame.com/blhx/%E4%BA%95%E5%8F%B7%E7%A2%A7%E8%93%9D%E6%A6%9C%E5%90%88%E9%9B%86">
-            井号5467的认知强度榜
-        </a>
-        ，並且所有圖片來源于碧藍航線wiki的圖庫，本人只是為了個人遊玩方便，決定自己編寫強度榜篩選圖鑒，本人並不熟悉html，css以及js的編程，是為了編寫這個網頁而自學所提及的語言，所以可能有大量bug以及不合理的設計。
-    </p>
-    <p class="paragraph">請注意圖鑒的篩選算法是AND而不是OR，並且和碧藍航線wiki不一樣。(因為我編程差，不會寫。)</p>
-    <p class="paragraph">並且所有艦船資料由html裡自帶。(感覺不該是這樣編寫的，工作量太大了，但是我不會)</p>
-    <p class="paragraph">此圖鑒僅包含強度榜中所存在的艦船，想看全圖鑒的，請回碧藍航線wiki。</p>
-    <p class="paragraph">此tier list更新時間不定，有興趣的朋友可以接手過去。<span class="spoiler">請務必這樣做</span></p>
-    <h1>圖鑒尚未更新完畢，現只包含驅逐艦。</h1>
-    <a style="font-size: xx-large;"href="htmls/tierlist.html">通往強度榜圖鑒</a>
-    </body>
+        <p class="paragraph">這個網頁以及repo是個人用來方便查詢的碧藍航線tier list，格式以及大量的源代碼參考<span class="spoiler">偷</span>自<a
+                href="https://wiki.biligame.com/blhx/%E9%A6%96%E9%A1%B5">碧藍航線wiki</a>。</p>
+        <p class="paragraph">Tier list來自<a
+                href="https://wiki.biligame.com/blhx/%E4%BA%95%E5%8F%B7%E7%A2%A7%E8%93%9D%E6%A6%9C%E5%90%88%E9%9B%86">
+                井号5467的认知强度榜
+            </a>
+            ，並且所有圖片來源于碧藍航線wiki的圖庫，本人只是為了個人遊玩方便，決定自己編寫強度榜篩選圖鑒，本人並不熟悉html，css以及js的編程，是為了編寫這個網頁而自學所提及的語言，所以可能有大量bug以及不合理的設計。
+        </p>
+        <p class="paragraph">請注意圖鑒的篩選算法是AND而不是OR，並且和碧藍航線wiki不一樣。(因為我編程差，不會寫。)</p>
+        <p class="paragraph">並且所有艦船資料由html裡自帶。(感覺不該是這樣編寫的，工作量太大了，但是我不會)</p>
+        <p class="paragraph">此圖鑒僅包含強度榜中所存在的艦船，想看全圖鑒的，請回碧藍航線wiki。</p>
+        <p class="paragraph">此tier list更新時間不定，有興趣的朋友可以接手過去。<span class="spoiler">請務必這樣做</span></p>
+        <h1>圖鑒尚未更新完畢，現只包含驅逐艦。</h1>
+        <a style="font-size: xx-large;" href="htmls/tierlist.html">通往強度榜圖鑒</a>
+    </span>
+</body>
+
 </html>
