--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <title>Main site</title>
     <link rel="stylesheet" href="styles/index.css">
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 
     <script>
         function select_language(language) {
