index.html updated, all fleet updated for tierlist.html

--- a/index.html
+++ b/index.html
@@ -34,11 +34,13 @@
             </a>
             ，并且所有图片来源于碧蓝航线wiki的图库，本人只是为了个人游玩方便，决定自己编写强度榜筛选图鉴，本人并不熟悉html，css以及js的编程，是为了编写这个网页而自学所提及的语言，所以可能有大量bug以及不合理的设计。
         </p>
+        <p class="paragraph">强度榜中重复出现的舰tier根据榜单上最高tier显示，详情请回强度榜图片查询。</p>
         <p class="paragraph">请注意图鉴的筛选算法是AND而不是OR，并且和碧蓝航线wiki不一样。 (因为我编程差，不会写。)</p>
         <p class="paragraph">并且所有舰船资料由html里自带。 (感觉不该是这样编写的，工作量太大了，但是我不会)</p>
         <p class="paragraph">此图鉴仅包含强度榜中所存在的舰船，想看全图鉴的，请回碧蓝航线wiki。</p>
         <p class="paragraph">此tier list更新时间不定，有兴趣的朋友可以接手过去。<span class="spoiler">请务必这样做</span></p>
-        <h1>图鉴尚未更新完毕，现只包含驱逐舰。</h1>
+        <h1><s>图鉴尚未更新完毕，现只包含驱逐舰。</s></h1>
+        <h1>已更新完毕</h1>
         <a style="font-size: xx-large;" href="htmls/tierlist.html">通往强度榜图鉴</a>
     </span>
     <span lang="TC" hidden>
@@ -51,11 +53,13 @@
             </a>
             ，並且所有圖片來源于碧藍航線wiki的圖庫，本人只是為了個人遊玩方便，決定自己編寫強度榜篩選圖鑒，本人並不熟悉html，css以及js的編程，是為了編寫這個網頁而自學所提及的語言，所以可能有大量bug以及不合理的設計。
         </p>
+        <p class="paragraph">強度榜中重複出現的艦tier根據榜單上最高tier顯示，詳情請回強度榜圖片查詢。</p>
         <p class="paragraph">請注意圖鑒的篩選算法是AND而不是OR，並且和碧藍航線wiki不一樣。(因為我編程差，不會寫。)</p>
         <p class="paragraph">並且所有艦船資料由html裡自帶。(感覺不該是這樣編寫的，工作量太大了，但是我不會)</p>
         <p class="paragraph">此圖鑒僅包含強度榜中所存在的艦船，想看全圖鑒的，請回碧藍航線wiki。</p>
         <p class="paragraph">此tier list更新時間不定，有興趣的朋友可以接手過去。<span class="spoiler">請務必這樣做</span></p>
-        <h1>圖鑒尚未更新完畢，現只包含驅逐艦。</h1>
+        <h1><s>圖鑒尚未更新完畢，現只包含驅逐艦。</s></h1>
+        <h1>已更新完畢</h1>
         <a style="font-size: xx-large;" href="htmls/tierlist.html">通往強度榜圖鑒</a>
     </span>
 </body>
