--- a/htmls/tierlist.html
+++ b/htmls/tierlist.html
@@ -5032,7 +5032,7 @@
                     title="射水鱼">射水鱼<br>喷水鱼</a></span>
         </div>
         <div class="jntj-1 divsort" data-param0="0" data-param1="潜艇" data-param2="超稀有" data-param3=",其他" data-param4="S"
-            data-param5="S" data-param6="" style="display: none">>
+            data-param5="S" data-param6="" style="display: none">
             <div class="jntj-2"><img alt="U-556·META头像.jpg"
                     src="https://patchwiki.biligame.com/images/blhx/thumb/1/1f/lzcbql1ll8gswywmjetdn7ldc4w9m5c.jpg/60px-U-556%C2%B7META%E5%A4%B4%E5%83%8F.jpg"
                     decoding="async" width="60" height="60"
@@ -5093,23 +5093,25 @@
             </div><span class="jntj-4"><a href="https://wiki.biligame.com/blhx/%E6%A3%98%E9%B3%8D"
                     title="棘鳍">棘鳍</a></span>
         </div>
-    </div>
-    <!-- 风帆 -->
-    <div class="jntj-1 divsort" data-param0="0" data-param1="风帆" data-param2="超稀有" data-param3="飓风" data-param4="B"
-    data-param5="B" data-param6="" style="display: none">
-        <div class="jntj-2"><img alt="皇家财富号头像.jpg"
-                src="https://patchwiki.biligame.com/images/blhx/thumb/f/fa/hht632x7ixdj45zky5you1a4hx20wqk.jpg/60px-%E7%9A%87%E5%AE%B6%E8%B4%A2%E5%AF%8C%E5%8F%B7%E5%A4%B4%E5%83%8F.jpg"
-                decoding="async" width="60" height="60"
-                srcset="https://patchwiki.biligame.com/images/blhx/thumb/f/fa/hht632x7ixdj45zky5you1a4hx20wqk.jpg/90px-%E7%9A%87%E5%AE%B6%E8%B4%A2%E5%AF%8C%E5%8F%B7%E5%A4%B4%E5%83%8F.jpg 1.5x, https://patchwiki.biligame.com/images/blhx/f/fa/hht632x7ixdj45zky5you1a4hx20wqk.jpg 2x"
-                data-file-width="100" data-file-height="100">
-            <div class="jntj-3"><a href="https://wiki.biligame.com/blhx/%E7%9A%87%E5%AE%B6%E8%B4%A2%E5%AF%8C%E5%8F%B7" title="皇家财富号"><img
-                        alt="舰娘头像外框超稀有.png"
-                        src="https://patchwiki.biligame.com/images/blhx/thumb/a/a2/ptog1j220x5q02hytpwc8al7f229qk9.png/60px-%E8%88%B0%E5%A8%98%E5%A4%B4%E5%83%8F%E5%A4%96%E6%A1%86%E8%B6%85%E7%A8%80%E6%9C%89.png"
-                        decoding="async" width="60" height="60"
-                        srcset="https://patchwiki.biligame.com/images/blhx/thumb/a/a2/ptog1j220x5q02hytpwc8al7f229qk9.png/90px-%E8%88%B0%E5%A8%98%E5%A4%B4%E5%83%8F%E5%A4%96%E6%A1%86%E8%B6%85%E7%A8%80%E6%9C%89.png 1.5x, https://patchwiki.biligame.com/images/blhx/a/a2/ptog1j220x5q02hytpwc8al7f229qk9.png 2x"
-                        data-file-width="95" data-file-height="95"></a></div>
-        </div><span class="jntj-4"><a href="https://wiki.biligame.com/blhx/%E7%9A%87%E5%AE%B6%E8%B4%A2%E5%AF%8C%E5%8F%B7"
-                title="皇家财富号">皇家财富号</a></span>
+        <!-- 风帆 -->
+        <div class="jntj-1 divsort" data-param0="0" data-param1="风帆" data-param2="超稀有" data-param3="飓风" data-param4="B"
+            data-param5="B" data-param6="" style="display: none">
+            <div class="jntj-2"><img alt="皇家财富号头像.jpg"
+                    src="https://patchwiki.biligame.com/images/blhx/thumb/f/fa/hht632x7ixdj45zky5you1a4hx20wqk.jpg/60px-%E7%9A%87%E5%AE%B6%E8%B4%A2%E5%AF%8C%E5%8F%B7%E5%A4%B4%E5%83%8F.jpg"
+                    decoding="async" width="60" height="60"
+                    srcset="https://patchwiki.biligame.com/images/blhx/thumb/f/fa/hht632x7ixdj45zky5you1a4hx20wqk.jpg/90px-%E7%9A%87%E5%AE%B6%E8%B4%A2%E5%AF%8C%E5%8F%B7%E5%A4%B4%E5%83%8F.jpg 1.5x, https://patchwiki.biligame.com/images/blhx/f/fa/hht632x7ixdj45zky5you1a4hx20wqk.jpg 2x"
+                    data-file-width="100" data-file-height="100">
+                <div class="jntj-3"><a
+                        href="https://wiki.biligame.com/blhx/%E7%9A%87%E5%AE%B6%E8%B4%A2%E5%AF%8C%E5%8F%B7"
+                        title="皇家财富号"><img alt="舰娘头像外框超稀有.png"
+                            src="https://patchwiki.biligame.com/images/blhx/thumb/a/a2/ptog1j220x5q02hytpwc8al7f229qk9.png/60px-%E8%88%B0%E5%A8%98%E5%A4%B4%E5%83%8F%E5%A4%96%E6%A1%86%E8%B6%85%E7%A8%80%E6%9C%89.png"
+                            decoding="async" width="60" height="60"
+                            srcset="https://patchwiki.biligame.com/images/blhx/thumb/a/a2/ptog1j220x5q02hytpwc8al7f229qk9.png/90px-%E8%88%B0%E5%A8%98%E5%A4%B4%E5%83%8F%E5%A4%96%E6%A1%86%E8%B6%85%E7%A8%80%E6%9C%89.png 1.5x, https://patchwiki.biligame.com/images/blhx/a/a2/ptog1j220x5q02hytpwc8al7f229qk9.png 2x"
+                            data-file-width="95" data-file-height="95"></a></div>
+            </div><span class="jntj-4"><a
+                    href="https://wiki.biligame.com/blhx/%E7%9A%87%E5%AE%B6%E8%B4%A2%E5%AF%8C%E5%8F%B7"
+                    title="皇家财富号">皇家财富号</a></span>
+        </div>
     </div>
     <div data-paramButton=""></div>
     <script src="../scripts/menu.js">
